# PCL-CGRE

./: .gitignore  CMakeLists.txt  NOTICE  README.md
.claude/: settings.local.json
.github/workflows/: build-linux.yml  build-windows.yml
data/ui/: help_faq.blp  help_support.blp  launch_right.blp  launch_sidebar.blp  page_setup_about.blp  page_setup_game_manage.blp  page_setup_java.blp  page_setup_language.blp  page_setup_launch.blp  page_setup_misc.blp  page_setup_ui.blp  page_setup_update.blp  settings_placeholder.blp  skin.blp  tools.blp
libpclcore/: CMakeLists.txt
libpclcore/include/pclcore/: pclcore.hpp
libpclcore/include/pclcore/core/: Colors.hpp  Log.hpp
libpclcore/src/core/: Log.cpp
libpclcore/src/local/: DownloadTask.cpp  Instance.cpp
libpclcore/src/network/: Dispatcher.cpp
resources/: lirpa_loof.json  pcl-cgre.gresource.xml  style.css
scripts/: build.sh  build_appimage.sh  gen_gresource_xml.py  setup_msys2_sysroot.py  setup_vps.sh
src/cli/: CMakeLists.txt  CliCommands.cpp  CliCommands.hpp
src/pcl-cgre/: CMakeLists.txt  main.cpp
src/pcl-cgre/app/: App.cpp  App.hpp  MainWindow.cpp  MainWindow.hpp
src/pcl-cgre/core/: BackgroundManager.cpp  BackgroundManager.hpp  Colors.hpp  ConfigManager.cpp  ConfigManager.hpp  FrameLimiter.cpp  FrameLimiter.hpp  GtkDispatcher.hpp  Log.hpp  Styles.cpp  Styles.hpp
src/pcl-cgre/data/: LoaderVersion.hpp  McVersion.hpp
src/pcl-cgre/network/: HttpUtil.hpp  LoaderFetcher.cpp  LoaderFetcher.hpp  McVersionFetcher.cpp  McVersionFetcher.hpp  ResourceFetcher.cpp  ResourceFetcher.hpp
src/pcl-cgre/pages/: DownloadPage.cpp  DownloadPage.hpp  LaunchPage.cpp  LaunchPage.hpp  McVersionDetailPage.cpp  McVersionDetailPage.hpp  MorePage.cpp  MorePage.hpp  PageJavaMgmt.cpp  PageSetupStubs.cpp  ResourceDetailPage.cpp  ResourceDetailPage.hpp  SettingsPage.cpp  SettingsPage.hpp
src/pcl-cgre/util/: FontHelper.cpp  FontHelper.hpp  IconHelper.cpp  IconHelper.hpp
src/pcl-cgre/widgets/: HeaderTabs.cpp  HeaderTabs.hpp  NotificationDrawer.cpp  NotificationDrawer.hpp  NotificationToast.cpp  NotificationToast.hpp  ResourceItem.cpp  ResourceItem.hpp
(+10 files in other folders)
